[package]
name = "rust_bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.1"
glutin = "0.28.0"
byteorder = "1.3.4"
crossbeam-channel = "0.5.0"
env_logger = "0.8.1"
lazy_static = "1.4.0"
log = "0.4.11"
nalgebra = "0.23.0"
ncollide2d = "0.26.1"
phf = {version = "0.8", features = ["macros"]}
piston = "0.53.1"
piston2d-graphics = "0.41.0"
piston2d-opengl_graphics = "0.79.0"
pistoncore-glutin_window = "0.69.0"
rosc = "0.5"
csv = "1.1"
pretty_env_logger = "0.4.0"
btleplug = "0.10"
uuid = "1.1.2"
futures = "0.3.21"
tokio = { version = "1.20.0", features = ["net","rt","macros","rt-multi-thread"] }
getopts = "0.2"
