[package]
name = "toio-osc"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4.0"
env_logger = "0.7"
btleplug = "0.10"
uuid = "1.1.2"
futures = "0.3.21"
tokio = { version = "1.20.0", features = ["net","rt","macros","rt-multi-thread"] }
rosc = "0.5"
getopts = "0.2"